# spotwebfc

./: .gitignore  CMakeLists.txt  README  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  filterpropertiesdialog.cpp  filterpropertiesdialog.h  filterpropertiesdialog.ui  filtertreewidgetitem.cpp  filtertreewidgetitem.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  newfilterdialog.cpp  newfilterdialog.h  newfilterdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  spotwebfc.cxml  spotwebfc.lng  spotwebfc.pro  spotwebfc.qrc  spotwebfc.rc  spotwebfc.xml  spotwebfc_de.ts  spotwebfc_fr.ts  spotwebfc_nl.ts  spotwebfc_xx.ts
.github/workflows/: cmake-ubuntu-latest.yml  cmake-windows-latest.yml
example/: filters-example.xml
installer/: license.txt  spotwebfc.iss
linux/: readme.txt  spotwebfc.sh
linux/AppDir/usr/lib/: readme.txt
linux/AppDir/usr/share/applications/: spotwebfc.desktop
nsis/: license.txt  spotwebfc.nsi
